# state_machine

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  README_RTT.md  SConscript  test_basic_sm  test_rtt  test_rtt_sm  test_sm
.github/workflows/: ci.yml
examples/: Makefile  app_state_machine.c  posix_app.c  posix_async_example.c  post_state.c  rt_posix_app.c  rtthread_app.c  rtthread_async_example.c  simple_fsm.c  simple_hsm.c  state_machine_example.c  state_machine_rtt_example.c  stress_test_rtt.c  test_misra_verification  test_misra_verification.c  test_rt_compliance.c  test_rtt_compliance  test_rtt_compliance.c  test_state_machine  test_state_machine.c  traffic_light.c
inc/: rt_thread_mock.h  state_machine.h  state_machine_rt.h  state_machine_rtt.h
include/state_machine/: state_machine.h  state_machine_rt.h
src/: rt_thread_mock.c  state_machine.c  state_machine_rt.c  state_machine_rtt.c
tests/: test_misra_verification.c  test_rt_compliance.c  test_state_machine.c
